@@ -33,9 +33,10 @@
 
       <div id="top">
         <!--  <a href="screenshots"> <img src="data/images/cheese-big.png" alt="cheese!"/> </a> -->
+        <a href="tour"><img src="data/images/cheese-big.png" alt="cheese!"/></a>
         <!-- <a href="tour"> <img src="data/images/cheese-tour.png" alt="cheese tour"/> </a> -->
         <!-- <a href="http://home.cs.tum.edu/~siegel/news/2008_06_12-awesomeness"> <img src="data/images/cheese-birthday.png" alt="cheese birthday"/> </a> -->
-        <a href="tour"> <img src="data/images/cheese-2.24.png" alt="cheese tour"/> </a>
+        <!-- <a href="tour"> <img src="data/images/cheese-2.24.png" alt="cheese tour"/> </a> -->
       </div><!-- top -->
 
       <!--
@@ -81,7 +82,7 @@
             <img src="data/images/application-x-executable.png" alt="icon" />
             </div>
             <ul>
-              <li>GNOME 2.24</li>
+              <li>GNOME 2.26</li>
               <li>GStreamer 0.10</li>
               <li><a href="http://burtonini.com/blog/computers/postr">postr</a> for Flickr export (optional)</li>
               <li><a href="http://f-spot.org">f-spot</a> for F-Spot export (optional)</li>
@@ -91,7 +92,7 @@
             </ul>
             <p>
             For a more detailed list of requirements, have a look at the
-            <a href="http://svn.gnome.org/svn/cheese/tags/2.24.0/README">README file</a>
+            <a href="http://svn.gnome.org/svn/cheese/tags/2.26.0/README">README file</a>
             </p>
 
             <h2>Bugs</h2>
@@ -140,6 +141,14 @@
 
         <div id="bottomRight">
           <h2>News</h2>
+
+          <h3>March 16th 2009</h3>
+          <p>
+          <b>Stable</b>
+          version 2.26.0 was released!<br/>
+          </p>
+          <a href="download">Download it</a>
+          <a href="http://mail.gnome.org/archives/gnome-announce-list/2009-March/msg00072.html">Release Notes</a>.
 
           <h3>March 2nd 2009</h3>
           <p>
