@@ -49,7 +49,8 @@
       <div id="top">
         <!--  <a href="screenshots"> <img src="data/images/cheese-big.png" alt="cheese!"/></a> -->
         <!-- <a href="tour"> <img src="data/images/cheese-tour.png" alt="cheese tour"/></a> -->
-        <a href="tour"> <img src="data/images/cheese-2.24.png" alt="cheese tour"/></a>
+        <!-- <a href="tour"> <img src="data/images/cheese-2.24.png" alt="cheese tour"/></a> -->
+        <a href="tour"><img src="data/images/cheese-big.png" alt="cheese!"/></a>
       </div><!-- top -->
 
       <div id="bottom">
@@ -182,11 +183,13 @@
 
         <div class="tour-item">
           <h2>Endless Possibilities</h2>
+          <!--
           <div class="imager">
             <a title="Endless Possibilities" rel="shadowbox[tour]" href="data/screenshots/cheese-2.24.0-countdown.jpg">
               <img src="data/tour/cheese-about.jpg" alt="icon" />
             </a>
           </div>
+          -->
           <p>
           Don't stop there, find out what you can do with Cheese today! Install
           Cheese and have fun, send us your funniest photos and videos, share
