@@ -1,3 +1,10 @@
+2009-03-17  daniel g. siegel <dgsiegel@gmail.com>
+
+	* projects.gnome.org/cheese/download.html,
+	  projects.gnome.org/cheese/index.html,
+	  projects.gnome.org/cheese/tour.html: 
+	  populate the cheese 2.26.0 release
+
 2009-03-15  Frederic Peters  <fpeters@0d.be>
 
 	* www.gnome.org/htaccess: swapped more RedirectMatch lines so
